--- a/canvas.html
+++ b/canvas.html
@@ -53,6 +53,7 @@
         <button id="transformBtn" class="radius-btn">绘制变换</button>
         <button id="imgBtn" class="radius-btn">绘制图像</button>
         <button id="shadowBtn" class="radius-btn">绘制阴影</button>
+        <button id="gradientBtn" class="radius-btn">绘制渐变</button>
       </div>
 
       <div id='fillStyle'>
@@ -90,15 +91,19 @@
         <canvas height="800" width="800">浏览器不支持Canavas</canvas>
       </div>
 
-      <div id='noSupport'>
-        <h3>您当前浏览器不支持 canvas标签， 请换一个浏览器试试！</h3>
-      </div>
-
       <div id='shadow'>
-        <h3>阴影绘制: shadowColor shadowOffsetX shadowOffsetY shadowBlur</h3>
+        <h3>绘制阴影: shadowColor shadowOffsetX shadowOffsetY shadowBlur</h3>
         <canvas height="800" width="800">浏览器不支持Canavas</canvas>
       </div>
 
+      <div id='gradient'>
+        <h3>绘制渐变: createLinearGradient createRadialGradient gradient.addColorStop</h3>
+        <canvas height="800" width="800">浏览器不支持Canavas</canvas>
+      </div>
+
+      <div id='noSupport'>
+        <h3>您当前浏览器不支持 canvas标签， 请换一个浏览器试试！</h3>
+      </div>
         
       <script>
         var div_list = document.getElementsByTagName('div');
@@ -148,6 +153,9 @@
           // 阴影按钮
           var shadowBtn = document.getElementById('shadowBtn');
           shadowBtn.onclick = drawShadow;
+          // 渐变按钮
+          var gradientBtn = document.getElementById('gradientBtn');
+          gradientBtn.onclick = drawGradient;
         }
         // 切换demo画板canvas
         function toggleDemo(d_id){
@@ -399,6 +407,31 @@
           ctx.fillText("ctx.fillStyle = 'rgba(0, 0, 255, 1)';", 312, 140);
           ctx.fillText("ctx.fillRect(30, 30, 50, 50);", 312, 160);
           ctx.fillText("", 312, 180);
+        }
+        // 绘制渐变
+        function drawGradient(){
+          var ctx = toggleDemo('gradient');
+          // 创建渐变对象
+          var gradient = ctx.createRadialGradient(55, 55, 10, 55, 55, 30);
+          gradient.addColorStop(0, 'white');
+          gradient.addColorStop(1, 'black');
+          // 绘制红色矩形
+          ctx.fillStyle = 'ff0000';
+          ctx.fillRect(10, 10, 50, 50);
+          // 绘制渐变矩形
+          ctx.fillStyle = gradient;
+          ctx.fillRect(30, 30, 50, 50);
+
+          // 说明文字
+          ctx.font = 'bold arial 12px';
+          ctx.fillStyle = '#000';
+          ctx.fillText("var gradient = ctx.createRadialGradient(55, 55, 10, 55, 55, 30);", 200, 20);
+          ctx.fillText("gradient.addColorStop(0, 'white');", 200, 40);
+          ctx.fillText("gradient.addColorStop(1, 'black');", 200, 60);
+          ctx.fillText("ctx.fillStyle = 'ff0000';", 200, 80);
+          ctx.fillText("ctx.fillRect(10, 10, 50, 50);", 200, 100);
+          ctx.fillText("ctx.fillStyle = gradient;", 200, 120);
+          ctx.fillText("ctx.fillRect(30, 30, 50, 50);", 200, 140);
         }
 
         // 修改h3文字
