--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -124,6 +124,29 @@
           .demo {
             display: none;
           }
+          /*多栏高度相等(等高实现)*/
+          .d-col-cont{
+            overflow:hidden;
+          }
+          .d-col-l{
+            width:200px; 
+            margin-bottom:-3000px; 
+            padding-bottom:3000px; 
+            background:#cad5eb; 
+            float:left;
+          }
+          .d-col-r{
+            width:400px; 
+            margin-bottom:-3000px; 
+            padding-bottom:3000px; 
+            background:#f0f3f9; 
+            float:right;
+          }
+          .d-col-c{
+            margin:0 410px 0 210px; 
+            background:#ffe6b8; 
+            height:600px;
+          }
 
         </style>
 
@@ -135,7 +158,7 @@
         <button id="tBtn1" class="radius-btn">css3动画</button>
         <button id="tBtn2" class="radius-btn">css水平垂直居中</button>
         <button id="tBtn3" class="radius-btn">css三栏布局</button>
-        <button id="tBtn4" class="radius-btn">双栏布局</button>
+        <button id="tBtn4" class="radius-btn">多栏布局</button>
       </div>
 
       <div id='test1' class="demo demo2">
@@ -174,7 +197,12 @@
       </div>
 
       <div id='test4' class="demo">
-        <h2>准备双栏布局</h2>
+        <h2>多栏高度自动相等</h2>
+        <div id="DoubleCol" class="d-col-cont">
+          <div class="d-col-l">左边，无高度属性，自适应于最高一栏的高度</div>
+          <div class="d-col-r">右边，无高度属性，自适应于最高一栏的高度</div>
+          <div class="d-col-c">中间，高度600像素，左右两栏的高度与之自适应</div>
+        </div>
       </div>
       
       <script src="./utils.js" type="text/javascript"></script>
@@ -183,8 +211,6 @@
         var i, len, btn;
         // 按钮列表 
         var btn_list = getElementsByClassName('button', 'radius-btn');
-        // 获得demo集合 参数1：标签名， 参数2：类名
-        var demo_list = getElementsByClassName('div', 'demo');
 
         for (i = 0, len = btn_list.length; i < len; i++) {
           btn = btn_list[i];
@@ -203,6 +229,8 @@
 
 
         function showAllDemo(){
+          // 获得demo集合 参数1：标签名， 参数2：类名, getElementsByClassName获取（utils.js 公用库中）
+          var demo_list = getElementsByClassName('div', 'demo');
           var i , len, n_item;
           for (i = 0, len = demo_list.length; i < len; i++) {
             n_item = demo_list[i];
@@ -210,8 +238,9 @@
           }
         }
 
-        // 使用自定义getElementsByClassName获取（utils.js 公用库中）
         function hideAllDemo(){
+          // 获得demo集合 参数1：标签名， 参数2：类名, getElementsByClassName获取（utils.js 公用库中）
+          var demo_list = getElementsByClassName('div', 'demo');
           var i , len, n_item;
           for (i = 0, len = demo_list.length; i < len; i++) {
             n_item = demo_list[i];
