canvas 合成代码优化添加

--- a/canvas.html
+++ b/canvas.html
@@ -562,9 +562,9 @@
             {x:200, y:200, opra:'source-out'},
             {x:300, y:200, opra:'source-atop'},
             {x:400, y:200, opra:'destination-over'},
-            {x:500, y:200, opra:'source-in'},
-            {x:600, y:200, opra:'source-out'},
-            {x:700, y:200, opra:'source-atop'}
+            {x:500, y:200, opra:'destination-in'},
+            {x:600, y:200, opra:'destination-out'},
+            {x:700, y:200, opra:'destination-atop'}
             // {x:300, y:200, opra:'xor'}
           ];
           var i , len, _comp, new_ele, comp_doms;
