--- a/renrenTest.html
+++ b/renrenTest.html
@@ -5,6 +5,9 @@
         <title>
             人人网笔试题
         </title>
+        <!--[if lt IE 9]>
+        <script src="../script/base.js"></script>
+        <![endif]-->
         <link rel="stylesheet" href="./common.css" type="text/style"/>
         <style>
           ol li{
