节点操作代码优化

--- a/others/renrenTest.html
+++ b/others/renrenTest.html
@@ -8,7 +8,7 @@
         <!--[if lt IE 9]>
         <script src="../script/base.js"></script>
         <![endif]-->
-        <link rel="stylesheet" href="./common.css" type="text/style"/>
+        <link rel="stylesheet" href="../common.css" type="text/style"/>
         <style>
           ol li{
             line-height: 1.5em;
@@ -253,7 +253,7 @@
 
         <div class="demo" id="showImg">
           <h3>一、在页面的固定区域内实现图片的展示</h3>
-          <img src="images/rrt_1.png" title="题目1" alt="题目1" />
+          <img src="../images/rrt_1.png" title="题目1" alt="题目1" />
           <ol>
             <li>每点击一次右箭头，图片区域向左滚动出一张图片，反之相同； </li>
             <li>当发现图片滚动到末尾时，响应的箭头变成不可点击状态；   </li>
@@ -266,28 +266,28 @@
               <a class="scroll_left">←</a>
               <a class="scroll_right">→</a>
               <ul>
-                <li><a href="#"><img src="images/s4.jpg"></a></li>
-                <li><a href="#"><img src="images/twopop.jpg"></a></li>
-                <li><a href="#"><img src="images/twomm.jpg"></a></li>
-                <li><a href="#"><img src="images/girl2.jpg"></a></li>
-                <li><a href="#"><img src="images/car.jpg"></a></li>
-                <li><a href="#"><img src="images/war.jpg"></a></li>
-                <li><a href="#"><img src="images/twomm.jpg"></a></li>
-                <li><a href="#"><img src="images/girl2.jpg"></a></li>
-                <li><a href="#"><img src="images/car.jpg"></a></li>
-                <li><a href="#"><img src="images/war.jpg"></a></li>
-                <li><a href="#"><img src="images/twomm.jpg"></a></li>
-                <li><a href="#"><img src="images/girl2.jpg"></a></li>
-                <li><a href="#"><img src="images/car.jpg"></a></li>
-                <li><a href="#"><img src="images/war.jpg"></a></li>
-                <li><a href="#"><img src="images/twomm.jpg"></a></li>
-                <li><a href="#"><img src="images/girl2.jpg"></a></li>
-                <li><a href="#"><img src="images/car.jpg"></a></li>
-                <li><a href="#"><img src="images/war.jpg"></a></li>
-                <li><a href="#"><img src="images/twomm.jpg"></a></li>
-                <li><a href="#"><img src="images/girl2.jpg"></a></li>
-                <li><a href="#"><img src="images/car.jpg"></a></li>
-                <li><a href="#"><img src="images/war.jpg"></a></li>
+                <li><a href="#"><img src="../images/s4.jpg"></a></li>
+                <li><a href="#"><img src="../images/twopop.jpg"></a></li>
+                <li><a href="#"><img src="../images/twomm.jpg"></a></li>
+                <li><a href="#"><img src="../images/girl2.jpg"></a></li>
+                <li><a href="#"><img src="../images/car.jpg"></a></li>
+                <li><a href="#"><img src="../images/war.jpg"></a></li>
+                <li><a href="#"><img src="../images/twomm.jpg"></a></li>
+                <li><a href="#"><img src="../images/girl2.jpg"></a></li>
+                <li><a href="#"><img src="../images/car.jpg"></a></li>
+                <li><a href="#"><img src="../images/war.jpg"></a></li>
+                <li><a href="#"><img src="../images/twomm.jpg"></a></li>
+                <li><a href="#"><img src="../images/girl2.jpg"></a></li>
+                <li><a href="#"><img src="../images/car.jpg"></a></li>
+                <li><a href="#"><img src="../images/war.jpg"></a></li>
+                <li><a href="#"><img src="../images/twomm.jpg"></a></li>
+                <li><a href="#"><img src="../images/girl2.jpg"></a></li>
+                <li><a href="#"><img src="../images/car.jpg"></a></li>
+                <li><a href="#"><img src="../images/war.jpg"></a></li>
+                <li><a href="#"><img src="../images/twomm.jpg"></a></li>
+                <li><a href="#"><img src="../images/girl2.jpg"></a></li>
+                <li><a href="#"><img src="../images/car.jpg"></a></li>
+                <li><a href="#"><img src="../images/war.jpg"></a></li>
               </ul>
             
             </div>
@@ -324,7 +324,7 @@
 
         <div class="demo" id="inputTips">
           <h3>三、实现 input 输入框的自动匹配</h3>
-          <img src="images/rrt_3.png" title="题目3" alt="题目3" />
+          <img src="../images/rrt_3.png" title="题目3" alt="题目3" />
           <ol>
             <li>对 input框中输入的字符进行匹配，将匹配到的内容以菜单的形式展现在  input框的下方；</li>
             <li>只针对英文字符进行匹配，并且匹配到的内容在菜单中加粗；  </li>
@@ -351,7 +351,7 @@
 
         <div class="demo" id="inputTips">
           <h3>四、在页面上实现一个二级菜单控件 </h3>
-          <img src="images/rrt_4.png" title="题目4" alt="题目4" />
+          <img src="../images/rrt_4.png" title="题目4" alt="题目4" />
           <ol>
             <li>这个控件可以绑定到页面上的任意一个元素，当点击页面元素出现菜单；  </li>
             <li>菜单出现的方向根据所在页面的位置自动进行调整，例如：  </li>
@@ -373,8 +373,8 @@
           </ol>
         </div>
         
-        <script src="utils.js" type="text/javascript"></script>
-        <script type="text/javascript" src = "base.js"></script>
+        <script src="../utils.js" type="text/javascript"></script>
+        <script type="text/javascript" src = "../base.js"></script>
         <script type="text/javascript">
           var btn_list = document.getElementsByClassName('radius-btn');
 
