重装系统前提交

--- a/others/renrenTest.html
+++ b/others/renrenTest.html
@@ -356,6 +356,7 @@
             <li>只针对英文字符进行匹配，并且匹配到的内容在菜单中加粗；  </li>
             <li>通过键盘上的上下箭头可以对菜单进行选择，按下回车后将选中的内容写入到 input框中；</li>
           </ol>
+          <h5>input 输入框自动匹配的其他方式， 请访问<a href="./zxxAutoComplete.html" alt="张鑫旭自动填充邮箱代码实现">张鑫旭自动填充邮箱代码实现</a></h5>
           <h4>具体实现效果如下：</h4>
           <br/>
 
@@ -399,6 +400,7 @@
             <li>插入超链接；</li>
             <li>插入图片； </li>
           </ol>
+          <h5>其他编辑器实现，请访问<a href="./mditorDemo.html" alt="剧中人编辑器">剧中人编辑器</a></h5>
           <h4>具体实现效果如下：</h4>
           <br/>
 
